--- a/bisca-ui/app/app.css
+++ b/bisca-ui/app/app.css
@@ -6,6 +6,15 @@ h1 {
   font-weight: bold;
   text-align: center;
 }
+
+span {
+  color: red;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 100%;
+  font-weight: bold;
+  text-align: center;
+}
+
 h2, h3 {
   color: #444;
   font-family: Arial, Helvetica, sans-serif;
